servicemesh/carts-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sockshop-carts
spec:
  host: carts.user3-sockshop.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      baseEjectionTime: 2m
      consecutiveErrors: 1
      interval: 1s
      maxEjectionPercent: 100
