servicemesh/front-end-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end-virtualservice
spec:
  hosts:
    - front-end-user3-sockshop.apps.cluster-6a92.6a92.sandbox595.opentlc.com
  gateways:
    - sockshop-wildcard-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: front-end.user3-sockshop.svc.cluster.local
